# delivery_sim

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: extending.md  extending_envs.md
docs/adr/: ADR-001.md  ADR-002.md
docs/design/: increment-b-realistic-architecture.md  increment-b-realistic-ui.md
docs/requirements/: increment-b-realistic.md
examples/: greedy_agent.py  random_agent.py
scenarios/: balanced.yaml  example.yaml
scenarios/presets/: balanced.yaml  heavy.yaml  light.yaml
scripts/: diagnose_scenario.py  evaluate.py  run_notes.md  train.py  visualize.py
src/delivery_sim/: __init__.py  registry.py
src/delivery_sim/config/: __init__.py  loader.py  schema.py
src/delivery_sim/engine/: __init__.py  clock.py  event_queue.py  simulator.py  world_state.py
src/delivery_sim/entities/: __init__.py  courier.py  demand_generator.py  order.py  store.py
src/delivery_sim/envs/: __init__.py  multi_agent.py  observations.py  single_agent.py
tests/: test_b0_fingerprint.py  test_clock.py  test_config.py  test_config_b_realistic.py  test_demand_amendment.py  test_demand_generators.py  test_entities.py  test_env.py  test_event_queue.py  test_heavy_seed_determinism.py  test_metrics.py  test_observations.py  test_order.py  test_order_b_realistic.py  test_registry.py  test_renderer.py  test_renderer_invariance.py  test_return_kpis.py  test_returns_lifecycle.py  test_rewards.py  test_routing.py  test_scenario_presets.py  test_simulator.py  test_snapshot_b9.py  test_store_queue.py  test_training_smoke.py
(+15 files in other folders)
